--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <title>top eight</title>
   </head>
   <body>
-    
+    <div class="wrapper">
+      <div class="header"><h2>Spencer Hasting's Friend Space</h2></div>
+      <div class="subheader"><p>Spencer Hasting has <span class="friendNumber">352</span> Friends.</p></div>
+      <div class="imgholder">
+        <div class="imgrow1">
+          <img src="img/face1.jpeg" alt="face" class="facepic">
+          <img src="img/face2.jpeg" alt="moreface" class="facepic">
+          <img src="img/face3.jpeg" alt="woahface" class="facepic">
+          <img src="img/face4.jpeg" alt="faaace" class="facepic">
+        </div>
+        <div class="imgrow2">
+          <img src="img/face5.jpeg" alt="trapped" class="facepic">
+          <img src="img/face6.jpeg" alt="in" class="facepic">
+          <img src="img/face7.jpeg" alt="a" class="facepic">
+          <img src="img/face8.jpeg" alt="facefactory" class="facepic">
+        </div>
+        <div class="footer">
+          <p>placeholder footer</p>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
